# automacao_estoque_sem_giro

./: README.md  config.yaml  estoque-sem-giro.spec  estoque_sem_giro.py  pyproject.toml  run_app.py  teste.py
data/output/descontinuados_02_11_2025/: descontinuados_02_11_2025_PDV_12043.csv  descontinuados_02_11_2025_PDV_12586.csv  descontinuados_02_11_2025_PDV_17788.csv  descontinuados_02_11_2025_PDV_18461.csv  descontinuados_02_11_2025_PDV_18612.csv  descontinuados_02_11_2025_PDV_20110.csv  descontinuados_02_11_2025_PDV_20119.csv  descontinuados_02_11_2025_PDV_20921.csv  descontinuados_02_11_2025_PDV_21181.csv  descontinuados_02_11_2025_PDV_22430.csv  descontinuados_02_11_2025_PDV_22470.csv  descontinuados_02_11_2025_PDV_23491.csv  descontinuados_02_11_2025_PDV_24587.csv  descontinuados_02_11_2025_PDV_24600.csv  descontinuados_02_11_2025_PDV_24601.csv  descontinuados_02_11_2025_PDV_24602.csv  descontinuados_02_11_2025_PDV_24604.csv  descontinuados_02_11_2025_PDV_6115.csv  descontinuados_02_11_2025_PDV_7908.csv
data/output/descontinuados_03_11_2025/: descontinuados_03_11_2025_PDV_12772.csv  descontinuados_03_11_2025_PDV_13867.csv  descontinuados_03_11_2025_PDV_17787.csv  descontinuados_03_11_2025_PDV_18610.csv  descontinuados_03_11_2025_PDV_18707.csv  (+19 more)
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/estoque_sem_giro/: archiver.py  cli.py  config.py  excel_reader.py  extractor.py  logging_config.py  pipeline.py  types.py  writers.py
src/estoque_sem_giro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+344 files in other folders)
